[package]
name = "twitter_clone"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-rt = "2.7.0"
serde =  { version = "1.0.14", features = ["derive"] }
serde_json = "1.0.0"
chrono ={version = "0.4.19", features =["serde"]}
uuid ={version="1.1.2", features=["serde", "v4"]}
env_logger = "0.9.0"
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"